force-app/main/default/objects/PricebookEntry/fields/crms11__Approval_Discount__c.field-meta.xml
<CustomField>
    <fullName>crms11__Approval_Discount__c</fullName>
    <label>Approval Discount</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>