force-app/main/default/objects/PricebookEntry/fields/crms11__Approval_Price__c.field-meta.xml
<CustomField>
    <fullName>crms11__Approval_Price__c</fullName>
    <label>Approval Price</label>
    <precision>13</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>