force-app/main/default/objects/PricebookEntry/fields/crms11__Approval_Quantity_X__c.field-meta.xml
<CustomField>
    <fullName>crms11__Approval_Quantity_X__c</fullName>
    <label>Approval Quantity X</label>
    <precision>13</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>