force-app/main/default/objects/PricebookEntry/fields/crms11__Contribution__c.field-meta.xml
<CustomField>
    <fullName>crms11__Contribution__c</fullName>
    <description>Contribution calculates margin on sale, (As UnitPrice - Unit_Cost__c)</description>
    <formula>IF(
$Setup.crms11__FlexPricer_Settings__c.crms11__Disable_Contribution_Calculation__c,
IF( ISNULL(crms11__Unit_Cost__c) &amp;&amp; ISNULL(Product2.crms11__Unit_Cost__c) &amp;&amp; ISNULL(Product2.crms11__Unit_Cost_of_Discounted_Price__c) &amp;&amp; ISNULL(Product2.crms11__Unit_Cost_of_List_Price__c) &amp;&amp; ISNULL(Product2.crms11__Unit_Cost_of_Sales_Price__c), NULL ,

IF( ISNULL(crms11__Unit_Cost__c), UnitPrice -  BLANKVALUE(Product2.crms11__Unit_Cost__c , 0) -
IF( OR(NOT( ISNULL(Product2.crms11__Unit_Cost_of_Discounted_Price__c)), NOT( ISNULL(Product2.crms11__Unit_Cost_of_List_Price__c )),NOT( ISNULL(Product2.crms11__Unit_Cost_of_Sales_Price__c ))),

IF(NOT( ISNULL(Product2.crms11__Unit_Cost_of_Discounted_Price__c)),UnitPrice * Product2.crms11__Unit_Cost_of_Discounted_Price__c,0) + if(NOT( ISNULL(Product2.crms11__Unit_Cost_of_List_Price__c)), UnitPrice * Product2.crms11__Unit_Cost_of_List_Price__c, 0) + if(NOT( ISNULL(Product2.crms11__Unit_Cost_of_Sales_Price__c)), UnitPrice * Product2.crms11__Unit_Cost_of_Sales_Price__c, 0)
,0) ,

UnitPrice -  BLANKVALUE(crms11__Unit_Cost__c, 0) -
IF( OR(NOT( ISNULL(Product2.crms11__Unit_Cost_of_Discounted_Price__c)), NOT( ISNULL(Product2.crms11__Unit_Cost_of_List_Price__c )),NOT( ISNULL(Product2.crms11__Unit_Cost_of_Sales_Price__c ))),

if(NOT( ISNULL(Product2.crms11__Unit_Cost_of_Discounted_Price__c)),UnitPrice * Product2.crms11__Unit_Cost_of_Discounted_Price__c,0) + if(NOT( ISNULL(Product2.crms11__Unit_Cost_of_List_Price__c)), UnitPrice * Product2.crms11__Unit_Cost_of_List_Price__c, 0) + if(NOT( ISNULL(Product2.crms11__Unit_Cost_of_Sales_Price__c)), UnitPrice * Product2.crms11__Unit_Cost_of_Sales_Price__c, 0)
,0))
), NULL )</formula>
    <inlineHelpText>Contribution calculates margin on sale.</inlineHelpText>
    <label>Contribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>