force-app/main/default/objects/PricebookEntry/fields/crms11__Floor_Quantity__c.field-meta.xml
<CustomField>
    <fullName>crms11__Floor_Quantity__c</fullName>
    <label>Floor Quantity</label>
    <precision>13</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>