force-app/main/default/objects/PricebookEntry/fields/crms11__New_List_Price__c.field-meta.xml
<CustomField>
    <fullName>crms11__New_List_Price__c</fullName>
    <formula>IF( NOT(ISBLANK(crms11__New_List_Price_Currency__c)),
   crms11__New_List_Price_Currency__c,
   IF(NOT(ISBLANK(crms11__New_List_Price_Percentage__c)), 
      UnitPrice  * (1+crms11__New_List_Price_Percentage__c) ,
       UnitPrice
)
)</formula>
    <label>New List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>