force-app/main/default/objects/PricebookEntry/fields/crms11__New_List_Price_Currency__c.field-meta.xml
<CustomField>
    <fullName>crms11__New_List_Price_Currency__c</fullName>
    <label>New List Price Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>