force-app/main/default/objects/PricebookEntry/fields/crms11__New_List_Price_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>crms11__New_List_Price_Effective_Date__c</fullName>
    <label>New List Price Effective Date</label>
    <type>Date</type>
</CustomField>