force-app/main/default/objects/PricebookEntry/fields/crms11__New_List_Price_Percentage__c.field-meta.xml
<CustomField>
    <fullName>crms11__New_List_Price_Percentage__c</fullName>
    <label>New List Price Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>